# generative-saleman

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: chatbot_streamlit.yaml
scripts/: chatbot_streamlit.py
src/generative-saleman/server/: calculator.py  product_info.py
src/generative_saleman/: config.py
src/generative_saleman/client/: openai_mcp.py
src/generative_saleman/handler/payment_cart_managment/: __init__.py  add_product_to_cart.py  cancel_lastest_order.py  cart_summary.py  checkout_cart.py  decode_slip_and_verify.py  reactivate_lastest_order.py  remove_product_from_cart.py
src/generative_saleman/handler/user/: __init__.py  get_session_id.py
src/generative_saleman/model/: orders.py  orders_contain_products.py  products.py  session.py  user.py
src/generative_saleman/server/: calculator.py  inventory.py  payment_cart_managment.py  payment_solution.py  product_info.py  rag.py
src/generative_saleman/services/: qr_services.py
src/generative_saleman/services/db_services/: __init__.py  base.py  orders_contain_products_db.py  orders_db.py  products_db.py  session_db.py  user_db.py
src/generative_saleman/utils/: check_session_id.py  format_product_by_order_id.py  get_log.py  llm_chat.py
tests/tools/: calculator_config.yaml  calculator_testcases.py  test_calculator.py
