[project]
name = "generative-saleman"
version = "0.1.0"
description = "This is our class project for the course of NLP SYSTEMS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp-openai>=0.2.0",
    "mcp[cli]>=1.5.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pytest]
addopts = ["--cov=generative_saleman", "--cov-report=term-missing"]
testpaths = ["tests"]
